[package]
name = "mount-api"
version = "0.1.1"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"
description = "nix-like wrappper of the new linux mount api"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mahkoh/mount-api"
keywords = ["linux", "mount"]
categories = ["filesystem", "os::unix-apis"]

[dependencies]
libc = "0.2"
nix = "0.17"
bitflags = "1"

[dev-dependencies]
tempfile = "3.0.5"
